feat: Implement unified JWT authentication system with LDAP support
- Add JWT-based authentication controller with LDAP integration
- Implement frontend authentication context with proper loading states
- Create login/logout pages with smooth user experience
- Fix authentication flash issue by preventing content display before auth check
- Configure authentication to skip login by default for development
- Add proper error handling and token verification
- Update API client to support JWT authentication
- Configure LDAP settings with SSL verification
- Disable CSRF protection for API endpoints

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -211,7 +211,7 @@ jobs:
     - name: Run Backend Linting
       run: bundle exec rubocop
       working-directory: ./backend
-      continue-on-error: true  # 最初は警告として実行
+              continue-on-error: true  # Run as warning first
     
     - name: Run Frontend Linting
       run: npm run lint
